# auto-jni

./: Cargo.toml  LICENSE  README.md
examples/calculator/: Cargo.toml  build.rs
examples/calculator/com/example/: Calculator.java
examples/calculator/src/: lib.rs
examples/car/: Cargo.toml  build.rs
examples/car/src/: main.rs
examples/java/src/com/example/: Car.java
src/: call.rs  codegen.rs  errors.rs  lib.rs
