[package]
name = "auto-jni"
version = "0.0.2"
edition = "2021"
license = "MIT"
description = "Automatically create bindings to Java through JNI"
repository = "https://github.com/Sha-dos/auto-jni"

[dependencies]
jni = { version = "0.21.1", features = ["invocation"] }
thiserror = "1.0"
once_cell = "1.18"
lazy_static = "1.5.0"
regex = "1.11.1"